create logs and exceptions